pad to max length (1024 for train, 8192 for test)

--- a/src/conf/task/niah_germanquad.yaml
+++ b/src/conf/task/niah_germanquad.yaml
@@ -2,4 +2,5 @@ task_name: niah_germanquad
 framework: "hf_qa"
 corpus_args:
   data_folder: "niah_GermanQuAD"
-max_length: 8192
+train_max_length: 1024
+test_max_length: 8192
